--- a/views/gm/quest.ejs
+++ b/views/gm/quest.ejs
@@ -106,59 +106,84 @@
      
      <div style="width:80%; margin:auto">
 
-        <p></p>
-        <h2>Informações da quest</h2>
-        <p></p>
+        <br>
+        <h2>Quest Information</h2>
+        <br>
 
-        <h3><%= quest.name %></h3>
-        <p></p>
+        <h3>Name: <%= quest.name %></h3>
+        <br>
 
-        <p><%= quest.clue_text %></p>
+        <p>Clue: <%= quest.clue %></p>
+
+        <p>Answer: <%= quest.answer %></p>
+
+        <input id="area" type="hidden" class="form-control" name="area" value="<%= quest.area %> ">
+        
 
     </div>
 
     <div id="map"></div>
 
-    <script>
-      // This example adds a search box to a map, using the Google Place Autocomplete
-      // feature. People can enter geographical searches. The search box will return a
-      // pick list containing a mix of places and predicted search terms.
+        <script>
+        
+        var areaField = document.getElementById("area");
+        var map, goal;
+        var goalCoords = [];
 
-      // This example requires the Places library. Include the libraries=places
-      // parameter when you first load the API. For example:
-      // <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&libraries=places">
-        function initAutocomplete() {
-
-            let north = <%= quest.north %>;
-            let south = <%= quest.south %>;
-            let east = <%= quest.east %>;
-            let west = <%= quest.west %>;
-
-            var latitude = (south + north)/2;
-            var longitute = (east + west)/2;
-
-            var map = new google.maps.Map(document.getElementById('map'), {
-                center: {lat: latitude, lng: longitute},
+        function initMap() {
+            map = new google.maps.Map(document.getElementById('map'), {
+                center: { lat: -34.397, lng: 150.644 },
                 zoom: 13,
             });
 
-            var rectangle = new google.maps.Rectangle({
-                bounds: {
-                    north: north,
-                    south: south,
-                    east: east,
-                    west: west
-                },
-                editable: false,
-                draggable: false
-            });
-            rectangle.setMap(map);
-
+            // Positionate the map at the user location
+            if (navigator.geolocation) {
+                navigator.geolocation.getCurrentPosition(function(position) {
+                    var pos = {
+                        lat: position.coords.latitude,
+                        lng: position.coords.longitude
+                    };
+                    map.setCenter(pos);
+                }, function() {
+                    handleLocationError(true, infoWindow, map.getCenter());
+                });
+            }
+            insertPolygon(map);
         }
 
-    </script>
+        function handleLocationError(browserHasGeolocation, infoWindow, pos) {
+            infoWindow.setPositMaion(pos);
+            infoWindow.setContent(browserHasGeolocation ?
+                'Error: The Geolocation service failed.' :
+                'Error: Your browser doesn\'t support geolocation.');
+            infoWindow.open(map);
+        }
 
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBV4PaT-tpXCdeGAW4e0mF_WAUC5GAMmBI&callback=initAutocomplete"></script>
+        function insertPolygon(map) {
+            map.data.setStyle({
+                editable: false,
+                draggable: false,
+                visible: true
+            });
+            
+            var temp = <%= quest.area %>;
+
+            for(var i = 0; i < temp.length; i++) {
+                goalCoords[i] = {
+                    lat: temp[i][1],
+                    lng: temp[i][0]
+                }
+            }
+
+            var goal = new google.maps.Polygon({paths: goalCoords});
+            goal.setMap(map);
+        }
+
+        initMap();
+
+    </script>
+    
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBV4PaT-tpXCdeGAW4e0mF_WAUC5GAMmBI&libraries=places,drawing,geometry&callback=initMap"></script>
 
     </body>
 
