--- a/views/player/login.ejs
+++ b/views/player/login.ejs
@@ -19,9 +19,11 @@
      
      <div style="width:80%; margin:auto">
 
-        <p></p>
+        <br>
         <h2>Login</h2>
-        <p></p>
+        <br>
+
+        <a href="/inicio">Início</a>
 
         <form action='' method="post">
 
@@ -36,6 +38,7 @@
             </div>
 
             <button id="saveBtn" type="submit" class="btn btn-primary">Login</button>
+
         </form>
         
     </div>
